# my-panda-arm

./: README.md
panda_moveit/: .setup_assistant  CMakeLists.txt  package.xml
panda_moveit/config/: fake_controllers.yaml  gazebo_panda.urdf  kinematics.yaml  ompl_planning.yaml  panda.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
panda_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
panda_simulation/: CMakeLists.txt  package.xml
panda_simulation/launch/: sim.launch  simulation.launch
robot_control/: CMakeLists.txt  package.xml
robot_description/: CMakeLists.txt  package.xml
robot_description/urdf/: franka_arm.xacro  franka_hand.xacro  franka_robot.xacro  hand.urdf.xacro  hand.xacro  panda.urdf.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro  utils.xacro
robot_gazebo/: CMakeLists.txt  package.xml
robot_gazebo/launch/: panda.launch
robot_gripper/: CMakeLists.txt  package.xml
robot_gui/: CMakeLists.txt  package.xml
robot_hw/: CMakeLists.txt  franka_combinable_hw_plugin.xml  package.xml
robot_master/: CMakeLists.txt  package.xml
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/msg/: FrankaState.msg
robot_services/: CMakeLists.txt  package.xml
robot_world/: package.xml
