<?xml version="1.0"?>
<package format="2">
  <name>robot_gazebo</name>
  <version>0.0.0</version>
  <description>The robot_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pan@todo.todo">pan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>angles</build_depend>
  <build_depend>boost_sml</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>franka_gripper</build_depend>
  <build_depend>franka_hw</build_depend>
  <build_depend>robot_msgs</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>angles</build_export_depend>
  <build_export_depend>boost_sml</build_export_depend>
  <build_export_depend>control_toolbox</build_export_depend>
  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>franka_gripper</build_export_depend>
  <build_export_depend>franka_hw</build_export_depend>
  <build_export_depend>robot_msgs</build_export_depend>
  <build_export_depend>gazebo_dev</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>joint_limits_interface</build_export_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>transmission_interface</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>boost_sml</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>franka_gripper</exec_depend>
  <exec_depend>franka_hw</exec_depend>
  <exec_depend>robot_msgs</exec_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>urdf</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/franka_gripper_sim_plugin.xml"/>
    <gazebo_ros_control   plugin="${prefix}/franka_hw_sim_plugin.xml"/>

    <!--Export gazebo models and worlds-->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_resource_path="${prefix}/world"/>
  </export>
</package>
